--- a/keygen_autopcare.html
+++ b/keygen_autopcare.html
@@ -18,7 +18,7 @@
 <div class="card">
   <h2>AutoPCare — Admin</h2>
 
-  <input id="pw" type="password" placeholder="Owner password (required)">
+  <input id="pw" type="kalikiben" placeholder="Owner password (required)">
 
   <label>Tipe license</label>
   <select id="type"><option value="single">single</option><option value="global">global</option></select>
