--- a/admin.html
+++ b/admin.html
@@ -5,113 +5,273 @@
 <title>AutoPCare Admin</title>
 <style>
   body{background:#0e0e0e;color:#fff;font-family:Arial;padding:24px}
-  .card{background:rgba(255,255,255,0.06);padding:14px;border-radius:10px;width:640px;margin:auto}
-  input,select,button{padding:10px;border-radius:8px;margin-top:8px;width:100%}
+  .card{background:rgba(255,255,255,0.06);padding:14px;border-radius:10px;width:900px;max-width:95%;margin:auto}
+  input,select,button{padding:10px;border-radius:8px;margin-top:8px;width:100%;box-sizing:border-box}
   button{background:#27ae60;color:#fff;border:none;font-weight:700;cursor:pointer}
   .muted{color:#9fb;font-size:13px;margin-top:8px}
   table{width:100%;border-collapse:collapse;margin-top:12px}
-  th,td{padding:8px;border-bottom:1px solid rgba(255,255,255,0.06);font-size:13px}
+  th,td{padding:8px;border-bottom:1px solid rgba(255,255,255,0.06);font-size:13px;vertical-align:top}
   .danger{background:#c0392b}
+  .row { display:flex; gap:8px; }
+  .row > * { flex:1; }
+  .small { font-size:13px; color:#9fb; margin-top:6px; }
+  .key-cell { word-break:break-all; max-width:280px; }
+  .btn-inline { display:inline-block; padding:6px 8px; margin:2px; border-radius:6px; cursor:pointer; background:#3498db; color:#fff; border:none; font-weight:600 }
+  .btn-danger { background:#c0392b; color:#fff }
+  pre { background: rgba(255,255,255,0.02); padding:8px; border-radius:8px; overflow:auto; max-height:220px }
+  #status { margin-top:10px; font-size:13px }
 </style>
 </head>
 <body>
 <div class="card">
   <h2>AutoPCare — Admin</h2>
 
-  <input id="pw" type="kalikiben" placeholder="Owner password (required)">
+  <input id="pw" type="password" placeholder="Owner password (required)">
 
-  <label>Tipe license</label>
-  <select id="type"><option value="single">single</option><option value="global">global</option></select>
-
-  <label>Durasi</label>
-  <select id="days"><option value="30">30 hari</option><option value="180">180 hari</option><option value="365">365 hari</option></select>
+  <div class="row">
+    <div>
+      <label>Tipe license</label>
+      <select id="type"><option value="single">single</option><option value="global">global</option></select>
+    </div>
+    <div>
+      <label>Durasi</label>
+      <select id="days"><option value="30">30 hari</option><option value="180">180 hari</option><option value="365">365 hari</option></select>
+    </div>
+  </div>
 
   <label>HWID (opsional)</label>
   <input id="hwid" placeholder="Isi untuk single (atau kosong -> *)">
 
-  <button id="btnGen">Generate Key</button>
-  <pre id="out" style="white-space:pre-wrap;margin-top:10px"></pre>
+  <div class="row">
+    <button id="btnGen">Generate Key</button>
+    <button id="btnCopyAll">Copy Latest Key</button>
+  </div>
+
+  <pre id="out" style="white-space:pre-wrap;margin-top:10px">Output akan muncul di sini.</pre>
 
   <hr style="opacity:0.06;margin-top:12px"/>
 
   <div style="display:flex;gap:8px">
     <button id="btnList" style="flex:1">List Keys</button>
     <button id="btnRefresh" style="flex:1">Refresh</button>
+    <button id="btnAuto" style="flex:1">Auto Refresh: OFF</button>
   </div>
 
-  <div id="tableWrap"></div>
-  <div class="muted">Semua permintaan admin dikirim ke Cloud Function yang aman (server-side checks).</div>
+  <div id="tableWrap" style="margin-top:12px"></div>
+  <div id="status" class="muted">Semua permintaan admin dikirim ke Cloud Function yang aman (server-side checks).</div>
 </div>
 
 <script>
-  const REGION_URL = "https://asia-southeast2-schesakra.cloudfunctions.net"; // ganti sesuai region/project
-  const ENDPOINTS = {
-    generate: REGION_URL + "/generateKey",
-    list: REGION_URL + "/listKeys",
-    markPaid: REGION_URL + "/markPaid",
-    markUsed: REGION_URL + "/markUsed",
-    revoke: REGION_URL + "/revokeKey",
-    verify: REGION_URL + "/verifyKey"
-  };
+/*
+  Admin HTML (fixed / robust)
+  - Ganti REGION_URL sesuai fungsi cloud Anda
+  - Menggunakan simple fetch GET untuk endpoints onRequest
+*/
+const REGION_URL = "https://asia-southeast2-schesakra.cloudfunctions.net"; // ganti sesuai region/project
+const ENDPOINTS = {
+  generate: REGION_URL + "/generateKey",
+  list: REGION_URL + "/listKeys",
+  markPaid: REGION_URL + "/markPaid",
+  markUsed: REGION_URL + "/markUsed",
+  revoke: REGION_URL + "/revokeKey",
+  verify: REGION_URL + "/verifyKey"
+};
 
-  const $ = id => document.getElementById(id);
-  $('btnGen').addEventListener('click', async ()=>{
-    const pw = $('pw').value.trim(); if(!pw) return alert('Masukkan password');
-    const type = $('type').value; const days = $('days').value; const hwid = $('hwid').value || '*';
-    const url = `${ENDPOINTS.generate}?pw=${encodeURIComponent(pw)}&type=${encodeURIComponent(type)}&days=${days}&hwid=${encodeURIComponent(hwid)}`;
-    const r = await fetch(url); const j = await r.json();
-    $('out').textContent = JSON.stringify(j, null, 2);
-    if (j && j.key) { // auto copy
-      try { await navigator.clipboard.writeText(j.key); $('out').textContent += "\\n\n(KEY copied to clipboard)"; } catch(e){}
-    }
-  });
+const $ = id => document.getElementById(id);
+let lastGeneratedKey = "";
+let autoRefreshTimer = null;
 
-  $('btnList').addEventListener('click', listKeys);
-  $('btnRefresh').addEventListener('click', listKeys);
+function setBusy(el, busy=true) {
+  el.disabled = busy;
+  if (busy) el.dataset.orig = el.innerText;
+  else if (el.dataset.orig) { el.innerText = el.dataset.orig; delete el.dataset.orig; }
+}
 
-  async function listKeys(){
-    const pw = $('pw').value.trim(); if(!pw) return alert('Masukkan password');
-    const url = `${ENDPOINTS.list}?pw=${encodeURIComponent(pw)}`;
-    const r = await fetch(url); const j = await r.json();
-    if (!j.ok) { $('out').textContent = JSON.stringify(j,null,2); return; }
-    const keys = j.keys;
-    const rows = Object.keys(keys||{}).reverse().map(id=>{
-      const k = keys[id];
-      return `<tr>
-        <td style="word-break:break-all">${id}</td>
-        <td style="word-break:break-all">${k.key||''}</td>
-        <td>${k.type||''}/${k.days||''}</td>
-        <td>${k.paid?'<b style="color:#6fb">PAID</b>':'<b style="color:#fb6">UNPAID</b>'}</td>
-        <td>${k.used?'<span style="color:#6fb">USED</span>':'-'}</td>
-        <td>${k.revoked?'<span style="color:#f66">REVOKED</span>':'-'}</td>
-        <td>
-          <button data-id="${id}" class="btnPaid">Mark Paid</button>
-          <button data-id="${id}" class="btnUsed">Mark Used</button>
-          <button data-id="${id}" class="btnRevoke danger">Revoke</button>
-        </td>
-      </tr>`;
-    }).join('');
-    $('tableWrap').innerHTML = `<table><thead><tr><th>ID</th><th>KEY</th><th>TYPE/DAYS</th><th>PAID</th><th>USED</th><th>REVOKED</th><th>ACTION</th></tr></thead><tbody>${rows}</tbody></table>`;
-
-    document.querySelectorAll('.btnPaid').forEach(b=> b.addEventListener('click', async e=>{
-      const id = e.currentTarget.dataset.id; if(!confirm('Mark paid?')) return;
-      const pw = $('pw').value.trim();
-      const url = `${ENDPOINTS.markPaid}?pw=${encodeURIComponent(pw)}&id=${encodeURIComponent(id)}`;
-      const r = await fetch(url); const j = await r.json(); alert(JSON.stringify(j,null,2)); listKeys();
-    }));
-    document.querySelectorAll('.btnUsed').forEach(b=> b.addEventListener('click', async e=>{
-      const id = e.currentTarget.dataset.id; if(!confirm('Mark used?')) return;
-      const pw = $('pw').value.trim();
-      const url = `${ENDPOINTS.markUsed}?pw=${encodeURIComponent(pw)}&id=${encodeURIComponent(id)}`;
-      const r = await fetch(url); const j = await r.json(); alert(JSON.stringify(j,null,2)); listKeys();
-    }));
-    document.querySelectorAll('.btnRevoke').forEach(b=> b.addEventListener('click', async e=>{
-      const id = e.currentTarget.dataset.id; if(!confirm('Revoke key?')) return;
-      const pw = $('pw').value.trim();
-      const url = `${ENDPOINTS.revoke}?pw=${encodeURIComponent(pw)}&id=${encodeURIComponent(id)}`;
-      const r = await fetch(url); const j = await r.json(); alert(JSON.stringify(j,null,2)); listKeys();
-    }));
+async function safeFetchJson(url, opts) {
+  try {
+    const res = await fetch(url, opts);
+    const text = await res.text();
+    // try parse JSON, otherwise return text
+    try { return { ok:true, status: res.status, json: JSON.parse(text) }; }
+    catch { return { ok:true, status: res.status, text }; }
+  } catch (e) {
+    return { ok:false, error: e.message || String(e) };
   }
+}
+
+$('btnGen').addEventListener('click', async () => {
+  const pw = $('pw').value.trim(); if(!pw) return alert('Masukkan password');
+  const type = $('type').value;
+  const days = $('days').value;
+  const hwid = $('hwid').value.trim() || '*';
+
+  const url = `${ENDPOINTS.generate}?pw=${encodeURIComponent(pw)}&type=${encodeURIComponent(type)}&days=${encodeURIComponent(days)}&hwid=${encodeURIComponent(hwid)}`;
+
+  setBusy($('btnGen'), true);
+  $('out').textContent = "Membuat key...";
+
+  const r = await safeFetchJson(url);
+  setBusy($('btnGen'), false);
+
+  if (!r.ok) { $('out').textContent = "Network error: " + r.error; return; }
+  if (r.status >= 400) {
+    $('out').textContent = `Server error (${r.status}): ${JSON.stringify(r.json || r.text)}`;
+    return;
+  }
+  const j = r.json || r.text;
+  $('out').textContent = JSON.stringify(j, null, 2);
+  if (j && j.key) {
+    lastGeneratedKey = j.key;
+    try { await navigator.clipboard.writeText(j.key); $('out').textContent += "\n\n(KEY copied to clipboard)"; } catch(e){}
+  } else if (j && j.error) {
+    $('out').textContent = "Error: " + j.error;
+  }
+});
+
+$('btnCopyAll').addEventListener('click', async ()=>{
+  if (!lastGeneratedKey) return alert("Belum ada key yang di-generate di sesi ini.");
+  try {
+    await navigator.clipboard.writeText(lastGeneratedKey);
+    alert("Key terakhir disalin ke clipboard.");
+  } catch(e) {
+    alert("Gagal salin: " + (e.message||e));
+  }
+});
+
+$('btnList').addEventListener('click', listKeys);
+$('btnRefresh').addEventListener('click', listKeys);
+
+$('btnAuto').addEventListener('click', ()=>{
+  if (autoRefreshTimer) {
+    clearInterval(autoRefreshTimer);
+    autoRefreshTimer = null;
+    $('btnAuto').innerText = "Auto Refresh: OFF";
+    showStatus("Auto refresh dimatikan.");
+  } else {
+    autoRefreshTimer = setInterval(listKeys, 30000); // setiap 30s
+    $('btnAuto').innerText = "Auto Refresh: ON";
+    showStatus("Auto refresh diaktifkan (30s).");
+    listKeys();
+  }
+});
+
+function showStatus(msg) {
+  $('status').innerText = msg;
+}
+
+async function listKeys(){
+  const pw = $('pw').value.trim(); if(!pw) return alert('Masukkan password untuk list');
+  const url = `${ENDPOINTS.list}?pw=${encodeURIComponent(pw)}`;
+  setBusy($('btnList'), true);
+  $('out').textContent = "Memuat daftar key...";
+  const r = await safeFetchJson(url);
+  setBusy($('btnList'), false);
+  if (!r.ok) { $('out').textContent = "Network error: " + r.error; return; }
+  if (r.status >= 400) {
+    $('out').textContent = `Server error (${r.status}): ${JSON.stringify(r.json || r.text)}`;
+    return;
+  }
+  const j = r.json || r.text;
+  if (!j.ok) {
+    $('out').textContent = JSON.stringify(j, null, 2);
+    return;
+  }
+  const keys = j.keys || {};
+  if (Object.keys(keys).length === 0) {
+    $('tableWrap').innerHTML = "<div class='small'>Belum ada key di database.</div>";
+    $('out').textContent = "Kosong";
+    return;
+  }
+
+  const rows = Object.keys(keys).reverse().map(id => {
+    const k = keys[id] || {};
+    const keyText = k.key || "";
+    const shortKey = keyText.length > 60 ? keyText.slice(0,60) + "..." : keyText;
+    const issued = k.issued ? new Date(k.issued).toLocaleString() : "";
+    const expires = k.expires ? new Date(k.expires).toLocaleString() : "";
+    return `<tr>
+      <td style="word-break:break-all"><b>${id}</b><div class="small">${issued} → ${expires}</div></td>
+      <td class="key-cell">${shortKey}<div style="margin-top:6px">
+        <button class="btn-inline" data-key="${encodeURIComponent(keyText)}" onclick="copyKey(this)">Copy</button>
+        <button class="btn-inline" data-key="${encodeURIComponent(keyText)}" onclick="openWA(this)">WA</button>
+        <button class="btn-inline" data-key="${encodeURIComponent(keyText)}" onclick="showFullKey(this)">Show</button>
+      </div></td>
+      <td>${k.type||''}/${k.days||''}</td>
+      <td>${k.paid?'<b style="color:#6fb">PAID</b>':'<b style="color:#fb6">UNPAID</b>'}</td>
+      <td>${k.used?'<span style="color:#6fb">USED</span>':'-'}</td>
+      <td>${k.revoked?'<span style="color:#f66">REVOKED</span>':'-'}</td>
+      <td>
+        <button data-id="${id}" class="btn-inline btnMarkPaid">Mark Paid</button>
+        <button data-id="${id}" class="btn-inline btnMarkUsed">Mark Used</button>
+        <button data-id="${id}" class="btn-inline btnRevoke btn-danger">Revoke</button>
+      </td>
+    </tr>`;
+  }).join('');
+
+  $('tableWrap').innerHTML = `<table><thead><tr><th style="width:12%">ID</th><th style="width:42%">KEY</th><th>TYPE/DAYS</th><th>PAID</th><th>USED</th><th>REVOKED</th><th>ACTION</th></tr></thead><tbody>${rows}</tbody></table>`;
+  bindActionButtons();
+  $('out').textContent = `Menampilkan ${Object.keys(keys).length} key.`;
+}
+
+// Helper functions used inline from template buttons
+window.copyKey = async function(btn){
+  const encoded = btn.getAttribute('data-key') || '';
+  const key = decodeURIComponent(encoded);
+  try { await navigator.clipboard.writeText(key); alert("Key disalin ke clipboard."); } catch(e){ alert("Gagal salin: "+e.message); }
+};
+window.openWA = function(btn){
+  const encoded = btn.getAttribute('data-key') || '';
+  const key = decodeURIComponent(encoded);
+  const msg = `Halo, ini KEY AutoPCare Anda:%0A%0A${encodeURIComponent(key)}`;
+  // ubah nomor tujuan jika perlu
+  const phone = "62816772145";
+  window.open(`https://wa.me/${phone}?text=${msg}`, '_blank');
+};
+window.showFullKey = function(btn){
+  const encoded = btn.getAttribute('data-key') || '';
+  const key = decodeURIComponent(encoded);
+  alert("Full Key:\n\n" + key);
+};
+
+function bindActionButtons(){
+  document.querySelectorAll('.btnMarkPaid').forEach(b => b.addEventListener('click', async e => {
+    const id = e.currentTarget.dataset.id; if(!confirm('Mark paid?')) return;
+    const pw = $('pw').value.trim(); if(!pw) return alert('Masukkan password');
+    const url = `${ENDPOINTS.markPaid}?pw=${encodeURIComponent(pw)}&id=${encodeURIComponent(id)}`;
+    setBusy(e.currentTarget, true);
+    const r = await safeFetchJson(url);
+    setBusy(e.currentTarget, false);
+    if (!r.ok) return alert("Network error: "+r.error);
+    alert(JSON.stringify(r.json || r.text, null, 2));
+    listKeys();
+  }));
+  document.querySelectorAll('.btnMarkUsed').forEach(b => b.addEventListener('click', async e => {
+    const id = e.currentTarget.dataset.id; if(!confirm('Mark used?')) return;
+    const pw = $('pw').value.trim(); if(!pw) return alert('Masukkan password');
+    const url = `${ENDPOINTS.markUsed}?pw=${encodeURIComponent(pw)}&id=${encodeURIComponent(id)}`;
+    setBusy(e.currentTarget, true);
+    const r = await safeFetchJson(url);
+    setBusy(e.currentTarget, false);
+    if (!r.ok) return alert("Network error: "+r.error);
+    alert(JSON.stringify(r.json || r.text, null, 2));
+    listKeys();
+  }));
+  document.querySelectorAll('.btnRevoke').forEach(b => b.addEventListener('click', async e => {
+    const id = e.currentTarget.dataset.id; if(!confirm('Revoke key?')) return;
+    const pw = $('pw').value.trim(); if(!pw) return alert('Masukkan password');
+    const url = `${ENDPOINTS.revoke}?pw=${encodeURIComponent(pw)}&id=${encodeURIComponent(id)}`;
+    setBusy(e.currentTarget, true);
+    const r = await safeFetchJson(url);
+    setBusy(e.currentTarget, false);
+    if (!r.ok) return alert("Network error: "+r.error);
+    alert(JSON.stringify(r.json || r.text, null, 2));
+    listKeys();
+  }));
+}
+
+// initial small hint
+$('out').textContent = "Siap. Masukkan password lalu klik Generate Key atau List Keys.";
+
 </script>
 </body>
 </html>
