--- a/testing.html
+++ b/testing.html
@@ -21,7 +21,8 @@
 
 <script>
 // ==== GANTI INI SESUAI PROJECT FIREBASEMU ====
-const REGION_URL = "https://schesakra-default-rtdb.asia-southeast1.firebasedatabase.app/";
+const REGION_URL = "https://asia-southeast2-schesakra.cloudfunctions.net
+";
 
 const API = {
   generate: REGION_URL + "/generateKey",
