--- a/admin.html
+++ b/admin.html
@@ -23,7 +23,7 @@
 <div class="card">
   <h2>AutoPCare Admin — Firebase Blaze</h2>
 
-  <input id="pw" type="password" placeholder="Owner password (required)">
+  <input id="pw" type="kalikiben" placeholder="Owner password (required)">
   <div class="row">
     <div>
       <label>Tipe license</label>
