--- a/admin.html
+++ b/admin.html
@@ -44,8 +44,8 @@
 // ===============
 // CONFIG
 // ===============
-const OWNER_PASSWORD = "admin123";     // ganti sendiri
-const SECRET_KEY = "MY_SUPER_SECRET";  // ganti sendiri
+const OWNER_PASSWORD = "Kalikiben1@";     // ganti sendiri
+const SECRET_KEY = "kalikiben";  // ganti sendiri
 
 // WebCrypto utility
 async function sha256(message){
